add dashboard referent
